fix: aligned checkbox and button in contact form

--- a/_sass/patterns/_form.scss
+++ b/_sass/patterns/_form.scss
@@ -52,7 +52,7 @@
 
   &__checkbox {
     display: inline-block;
-    margin-right: $sp-xxsmall;
+    margin-right: $sp-base;
     vertical-align: middle;
   }
 }
